tests/sksl/errors/EmptyArray.dsl.glsl
### Compilation failed:

error: expected integer literal, but found '-'
error: expected a type, but found '1'
error: array size must be positive

3 errors
